Fixing div getting cut off on setting vh, by removing justify-content: space-around

--- a/src/styles/stylesheet.css
+++ b/src/styles/stylesheet.css
@@ -1,15 +1,10 @@
-html, body{
-  height: 100%;
-}
-#app{
-  height: 100%;
-}
-.app{
+html, body, #app, #app>div, .app{
   height: 100%;
 }
 body{
     margin: 0;
     background-color: #f5f5f5;
+    overflow: hidden;
 }
 *{
   font-weight: 200;
@@ -80,7 +75,7 @@ h6{
   margin: 20px 40px 40px 40px;
   padding: 20px;
   border: 1px solid #dee5e7;
-  height: 75vh;
+  height: 80vh;
   overflow: scroll;
   position: relative;
 }
